# django-ecommerce

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
src/: manage.py
src/django_ecommerce/: __about__.py  asgi.py  urls.py  wsgi.py
src/django_ecommerce/product/: apps.py  models.py  serializers.py  views.py
src/django_ecommerce/product/migrations/: 0001_initial.py
src/django_ecommerce/settings/: base.py  database.py
tests/: __init__.py  conftest.py  factories.py
tests/product/: test_models.py  test_routers.py
