[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-ecommerce"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Kalel L. Martinho", email = "kalel@tutamail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "Django>=5.0",
    "djangorestframework>=3.14",
    "sqlparse>=0.4.4",
    "asgiref>=3.7.2",
    "pytz>=2023.4",
]

[project.urls]
Documentation = "https://github.com/unknown/django-ecommerce#readme"
Issues = "https://github.com/unknown/django-ecommerce/issues"
Source = "https://github.com/unknown/django-ecommerce"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "src.django_ecommerce.settings.base"
python_files = "test_*.py"
pythonpath = "."

[tool.hatch.version]
path = "src/django_ecommerce/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]
[tool.hatch.envs.default.scripts]
lint = "ruff . && ruff check --select I . && ruff format . --check"
format = "ruff . --fix && ruff format . && ruff check --select I . --fix"
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.types]
dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/django_ecommerce tests}"

[tool.coverage.run]
source_pkgs = ["django_ecommerce", "tests"]
branch = true
parallel = true
omit = [
  "src/django_ecommerce/__about__.py",
]

[tool.coverage.paths]
django_ecommerce = ["src/django_ecommerce", "*/django-ecommerce/src/django_ecommerce"]
tests = ["tests", "*/django-ecommerce/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
